Full body  model added for transparent

--- a/v1/index.html
+++ b/v1/index.html
@@ -120,7 +120,7 @@
         <a-assets>
           <a-asset-item
             id="headModel"
-            src="/assets/sparkar/headOccluder.glb"
+            src="./public/assets/sparkar/Full-Body-New.glb"
           ></a-asset-item>
 
           <a-asset-item
