--- a/v1/index.html
+++ b/v1/index.html
@@ -6,87 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="/libs/aframe.min.js"></script>
     <script src="./src/face-target/aframe.js" type="module"></script>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const list = [
-          "hat1",
-          "hat2",
-          "hat3",
-          "hat4",
-          "glasses1",
-          "glasses2",
-          "glasses3",
-          "glasses4",
-          "mustache",
-          "earring",
-          "hair",
-        ];
-        const visibles = [
-          false,
-          false,
-          false,
-          false,
-          false,
-          false,
-          false,
-          false,
-          false,
-          false,
-          true,
-        ];
-
-        const setVisible = (button, entities, visible) => {
-          if (visible) {
-            button.classList.add("selected");
-          } else {
-            button.classList.remove("selected");
-          }
-          entities.forEach((entity) => {
-            entity.setAttribute("visible", visible);
-          });
-        };
-        list.forEach((item, index) => {
-          const button = document.querySelector("#" + item);
-          const entities = document.querySelectorAll("." + item + "-entity");
-          setVisible(button, entities, visibles[index]);
-          button.addEventListener("click", () => {
-            visibles[index] = !visibles[index];
-            setVisible(button, entities, visibles[index]);
-          });
-        });
-      });
-    </script>
-
-    <style>
-      body {
-        margin: 0;
-      }
-      .example-container {
-        overflow: hidden;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-      }
-      .options-panel {
-        position: fixed;
-        top: 0;
-        left: 50%;
-        display: flex;
-        transform: translateX(-50%);
-        z-index: 2;
-      }
-      .options-panel img {
-        border: solid 2px;
-        width: 50px;
-        height: 50px;
-        object-fit: cover;
-        cursor: pointer;
-      }
-      .options-panel img.selected {
-        border-color: green;
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./main2.js" type="module"></script>
   </head>
 
   <body>
@@ -120,7 +41,7 @@
         <a-assets>
           <a-asset-item
             id="headModel"
-            src="./public/assets/sparkar/Full-Body-New.glb"
+            src="/assets/sparkar/Full-Body-New.glb"
           ></a-asset-item>
 
           <a-asset-item
@@ -169,7 +90,7 @@
 
           <a-asset-item
             id="hairModel"
-            src="public/assets/Hait/Hair_1.glb"
+            src="/assets/Hait/Hair_1.glb"
           ></a-asset-item>
         </a-assets>
 
@@ -315,8 +236,11 @@
             visible="false"
           ></a-gltf-model>
         </a-entity>
-
       </a-scene>
+      <div class="navigation">
+        <button class="arrow-btn arrow-left">left</button>
+        <button class="arrow-btn arrow-right">right</button>
+      </div>
     </div>
   </body>
 </html>
