--- a/Racoon-face-mediapipe/my-app/index.html
+++ b/Racoon-face-mediapipe/my-app/index.html
@@ -23,7 +23,7 @@
   <div class="container">
     <video id="video"></video>
   </div>
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="/src/main1.ts"></script>
 </body>
 
 </html>
