--- a/Racoon-face-mediapipe/my-app/index.html
+++ b/Racoon-face-mediapipe/my-app/index.html
@@ -1,29 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mediapipe Blendshapes</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mediapipe Blendshapes</title>
-</head>
+  <body>
+    <script
+      async
+      src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"
+    ></script>
 
-<body>
-  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-
-  <script type="importmap">
-    {
-            "imports": {
-                "three": "https://cdn.skypack.dev/three@0.150.1",
-                "OrbitControls": "https://cdn.skypack.dev/three@0.150.1/examples/jsm/controls/OrbitControls.js",           
-                  "GLTFLoader": "https://cdn.skypack.dev/three@0.150.1/examples/jsm/loaders/GLTFLoader.js"
-            }
+    <!-- <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.skypack.dev/three@0.150.1",
+          "OrbitControls": "https://cdn.skypack.dev/three@0.150.1/examples/jsm/controls/OrbitControls.js",
+          "GLTFLoader": "https://cdn.skypack.dev/three@0.150.1/examples/jsm/loaders/GLTFLoader.js"
         }
-    </script>
-  <div class="container">
-    <video id="video"></video>
-  </div>
-  <script type="module" src="/src/main1.ts"></script>
-</body>
-
+      }
+    </script> -->
+    <div class="container">
+      <video id="video"></video>
+      <canvas id="canvas"></canvas>
+    </div>
+    <!-- <script type="module" src="/src/main1.ts"></script> -->
+    <script type="module" src="/src/main2.js"></script>
+  </body>
 </html>
