--- a/Racoon-face-mediapipe/my-app/index.html
+++ b/Racoon-face-mediapipe/my-app/index.html
@@ -8,6 +8,12 @@
   </head>
 
   <body>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
     <script
       async
       src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"
@@ -23,8 +29,8 @@
       }
     </script> -->
     <div class="container">
-      <video id="video"></video>
-      <canvas id="canvas"></canvas>
+      <video id="video" hidden></video>
+      <!-- <canvas id="canvas"></canvas> -->
     </div>
     <!-- <script type="module" src="/src/main1.ts"></script> -->
     <script type="module" src="/src/main2.js"></script>
