arrow button change in v1

--- a/v1/index.html
+++ b/v1/index.html
@@ -309,8 +309,10 @@
         </a-entity>
       </a-scene>
       <div class="navigation">
-        <button class="key__button arrow-left">Prev</button>
-        <button class="key__button arrow-right">Next</button>
+        <!-- <button class="key__button arrow-left">&#8249;</button>
+        <button class="key__button arrow-right">&#8250;</button> -->
+        <a href="#" class="key__button arrow-left">&#8249;</a>
+        <a href="#" class="key__button arrow-right">&#8250;</a>
       </div>
     </div>
   </body>
