Hair Model added

--- a/v1/index.html
+++ b/v1/index.html
@@ -29,6 +29,11 @@
         <img id="earring" src="/assets/earring/thumbnail.png" />
 
         <img id="hair" src="./public/assets/Hait/hair_1.png" />
+        <img id="hair1" src="./public/assets/Hait/Hair_Model/Hair_model_1.png" />
+        <img id="hair2" src="./public/assets/Hait/Hair_Model/Hair_model_2.png" />
+        <img id="hair3" src="./public/assets/Hait/Hair_Model/Hair_model_3.png" />
+        <img id="hair4" src="./public/assets/Hait/Hair_Model/Hair_model_4.png" />
+        <img id="hair5" src="./public/assets/Hait/Hair_Model/Hair_model_5.png" />
 
         <img id="mask1" src="./public/assets/FaceMask/mask_1.png" />
         <img id="mask2" src="./public/assets/FaceMask/mask_2.png" />
@@ -97,6 +102,26 @@
           <a-asset-item
             id="hairModel"
             src="/assets/Hait/Hair_1.glb"
+          ></a-asset-item>
+          <a-asset-item
+            id="hairModel1"
+            src="/assets/Hait/Hair_Model/hair_model_1.glb"
+          ></a-asset-item>
+          <a-asset-item
+            id="hairModel2"
+            src="/assets/Hait/Hair_Model/hair_model_2.glb"
+          ></a-asset-item>
+          <a-asset-item
+            id="hairModel3"
+            src="/assets/Hait/Hair_Model/hair_model_3.glb"
+          ></a-asset-item>
+          <a-asset-item
+            id="hairModel4"
+            src="/assets/Hait/Hair_Model/hair_model_4.glb"
+          ></a-asset-item>
+          <a-asset-item
+            id="hairModel5"
+            src="/assets/Hait/Hair_Model/hair_model_5.glb"
           ></a-asset-item>
 
           <a-asset-item
@@ -260,6 +285,56 @@
             scale="0.027 0.027 0.027"
             src="#hairModel"
             class="hair-entity"
+            visible="false"
+          ></a-gltf-model>
+        </a-entity>
+        <a-entity mindar-face-target="anchorIndex: 168">
+          <a-gltf-model
+            rotation="0 0 0"
+            position="0 -0.675 -0.5"
+            scale="8 8 8"
+            src="#hairModel1"
+            class="hair1-entity"
+            visible="false"
+          ></a-gltf-model>
+        </a-entity>
+        <a-entity mindar-face-target="anchorIndex: 168">
+          <a-gltf-model
+            rotation="0 0 0"
+            position="0 -0.7 -0.6"
+            scale="1.5 1.5 1.5"
+            src="#hairModel2"
+            class="hair2-entity"
+            visible="false"
+          ></a-gltf-model>
+        </a-entity>
+        <a-entity mindar-face-target="anchorIndex: 168">
+          <a-gltf-model
+            rotation="0 0 0"
+            position= "0 -0.55 -0.55"
+            scale="2.5 2.5 2.5"
+            src="#hairModel3"
+            class="hair3-entity"
+            visible="false"
+          ></a-gltf-model>
+        </a-entity>
+        <a-entity mindar-face-target="anchorIndex: 168">
+          <a-gltf-model
+            rotation="0 0 0"
+            position="0 -2.2 -0.5"
+            scale="0.1 0.1 0.1"
+            src="#hairModel4"
+            class="hair4-entity"
+            visible="false"
+          ></a-gltf-model>
+        </a-entity>
+        <a-entity mindar-face-target="anchorIndex: 168">
+          <a-gltf-model
+            rotation="0 0 0"
+            position="0 -1 -0.8"
+            scale="0.17 0.17 0.17"
+            src="#hairModel5"
+            class="hair5-entity"
             visible="false"
           ></a-gltf-model>
         </a-entity>
